# atvoss

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OAT.xml  OWNERS  README.md  SECURITY.md  Third_Party_Open_Source_Softerware_List.yaml  Third_Party_Open_Source_Softerware_Notice  build.sh  classify_rule.yaml
cmake/: CMakeASCEND.cmake  dependencies.cmake  intf_pub_linux.cmake  intf_pub_llt.cmake  makeself.cmake  package.cmake  variables.cmake
cmake/modules/: Finddlog.cmake  Findsecurec.cmake
docs/: 01_quick_start.md  02_developer_guide.md  03_design.md  04_expression.md  directory_structure.md  quick_start.md  summary.md
docs/api/: Abs.md  Add.md  ArgumentsBuilderImpl_build.md  ArgumentsBuilder_attr.md  ArgumentsBuilder_inputOutput.md  BaseBlockSchedule_MakeScheduleConfig.md  BaseBlockSchedule_Run.md  BaseKernelSchedule_MakeScheduleConfig.md  BaseKernelSchedule_Run.md  BinaryOp.md  BlockBuilder.md  Cast.md  Compute.md  DefaultBlockConfig.md  DefaultBlockPolicy.md  DefaultBlockSchedule.md  DefaultKernelConfig.md  DefaultKernelPolicy.md  DefaultKernelSchedule.md  DeviceAdapter.md  DeviceAdapter_Run.md  Div.md  Exp.md  KernelBuilder.md  Mul.md  ParamUsage.md  PlaceHolder.md  PlaceHolderTmpLike.md  Power.md  README.md  Sqrt.md  Sub.md  TernaryOp.md  UnaryOp.md
docs/tutorials/: developer_guide.md
examples/: CMakeLists.txt  README.md  run_examples.sh
examples/abs/: CMakeLists.txt  README.md  abs.cpp
examples/cast/: README.md  cast.cpp
examples/common/: command_line.h  example_common.h
examples/muls/: CMakeLists.txt  README.md  muls.cpp
examples/python_extension/: CMakeLists.txt  README.md  build_and_test.sh  setup.py
examples/python_extension/ascend_ops/: __init__.py
examples/python_extension/cmake/: ascend.cmake  func.cmake
examples/python_extension/csrc/: CMakeLists.txt
examples/python_extension/csrc/abs/ascend950/: CMakeLists.txt  abs.cpp
examples/python_extension/tests/abs/: test_abs.py
examples/rms_norm/: CMakeLists.txt  README.md  rms_norm.cpp
include/: atvos.h  atvoss.h
include/block/: base_schedule.h  block_elewise.h  block_schedule.h  block_tail_tensor.h  block_tensor.h
include/common/: arch.h  compile_info.h  tuple_tool.h  type_def.h
include/device/: device_adapter.h  device_tensor.h
include/elewise/block/: block_info_tile.h  builder.h  schedule.h
include/elewise/device/: device_adapter.h  device_tensor.h  tiling.h
include/elewise/kernel/: builder.h  schedule.h
include/elewise/tile/: tile_evaluate.h
include/evaluator/: eval_base.h
include/expression/: expr_template.h
include/graph/: bind.h  buffer.h  compute_preproc.h  dag.h  expr_linearizer.h  expr_remove_redundant_cast.h  flatten_expr_recursively.h  node.h
include/kernel/: base_schedule.h  kernel_elewise.h  kernel_schedule.h
include/operators/: math_evaluator.h  math_expression.h  tensor_evaluator.h  tensor_expression.h  tile_shape.h  transcendental_evaluator.h  transcendental_expression.h
include/tile/: tile_ascendc_math.h  tile_ascendc_transcendental.h  tile_cmp.h  tile_elewise.h  tile_evaluator.h  tile_evaluator_common.h  tile_evaluator_math.h  tile_evaluator_transcendental.h  tile_operator.h
include/utils/: log.h  npu_config.h  operation.h  patterns.h  tensor.h  utility.h
include/utils/arguments/: arguments.h
include/utils/buf_pool/: block_buf_pool.h  loopbuf.h
include/utils/expression/: cmp.h  common.h  expr.h  expr_utils.h  expression.h  math.h  transcendental.h  utility.h
include/utils/layout/: layout.h  shape.h
include/utils/tensor/: tensor.h
scripts/: build.sh
scripts/package/: package.py
scripts/package/atvos/: atvos.xml
scripts/package/atvoss/: atvoss.xml
scripts/package/scripts/: atvoss_custom_create_softlink.sh  atvoss_custom_install.sh  atvoss_custom_remove_softlink.sh  atvoss_custom_uninstall.sh  atvoss_func.sh  cleanup.sh  help.info  install.sh  prereq_check.bash  prereq_check.csh  prereq_check.fish  run_atvoss_install.sh  run_atvoss_uninstall.sh  run_atvoss_upgrade.sh  setenv.bash  setenv.csh  setenv.fish  uninstall.sh  ver_check.sh
test/ut/: CMakeLists.txt  main_global.cpp
test/ut/common/: k3_pvwrap.cpp  k3_pvwrap.h  platform_stub.cpp  platform_stub.h  tik_pv_wrapper.cpp  tik_pv_wrapper.h
test/ut/kernel/: test_rms_norm.cpp
test/ut/param/: test_atvos_param.cpp  test_param.cpp
test/ut/scripts/: generate_cpp_cov.sh
tests/: CMakeLists.txt
tests/st/: CMakeLists.txt  test_block_cast1.cpp  test_block_cast10.cpp  test_block_cast11.cpp  test_block_cast12.cpp  test_block_cast2.cpp  test_block_cast3.cpp  test_block_cast4.cpp  test_block_cast5.cpp  test_block_cast6.cpp  test_block_cast7.cpp  test_block_cast8.cpp  test_block_cast9.cpp  test_cast_elimination.cpp  test_compute_allbuffer_reuse.cpp  test_compute_assign_rhs_is_param.cpp  test_compute_autobuffer_redundant_with_autopolicy.cpp  test_compute_autobuffer_redundant_with_manupolicy.cpp  test_compute_buffer_reuse.cpp  test_compute_cascade.cpp  test_compute_cascade_with_noparentheses.cpp  test_compute_cascade_with_scalar.cpp  test_compute_expression_redundant_with_autopolicy.cpp  test_compute_expression_redundant_with_manupolicy.cpp  test_compute_inputbuffer_reuse.cpp  test_compute_outputbuffer_reuse.cpp  test_compute_scalar_tensor_mix.cpp  test_compute_tmp_redundant_with_autopolicy.cpp  test_compute_tmp_redundant_with_manupolicy.cpp  test_op_add.cpp  test_op_adds_lhs.cpp  test_op_adds_rhs.cpp  test_op_div.cpp  test_op_divs_lhs.cpp  test_op_divs_rhs.cpp  test_op_exp.cpp  test_op_mul.cpp  test_op_muls_lhs.cpp  test_op_muls_rhs.cpp  test_op_power.cpp  (+21 more)
tests/ut/: CMakeLists.txt
tests/ut/builtin_kernel/: CMakeLists.txt  abs_config.h  test_builtin_kernel.cpp  tiling_data_stub.h
tests/ut/builtin_tiling/: CMakeLists.txt  test_builtin_tiling.cpp
tests/ut/compile_perf/: CMakeLists.txt  compile_perf_test.cpp
tests/ut/compile_perf/cases/: 120_expr_op.cpp  120_expr_op_with_auto.cpp  120_expr_op_with_bind_buff.cpp  expr_linearizer_perf.cpp
tests/ut/host/: CMakeLists.txt  test_arguments.cpp  test_elewise_tiling.cpp  test_expr_linearizer.cpp  test_utility.cpp
(+46 files in other folders)
